add new block: philosophy company

--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
                     </div>
                    </div>
                 </section>
+                <section class="philosophy">
+                    <div class="philosophy__content">
+                      <div class="philosophy__content-text">
+                        <h3 class="philosophy-title">Company Philosophy </h3>
+                        <p>The basic philosophy of our studio is to create individual, aesthetically stunning solutions for our customers by lightning-fast development of projects employing unique styles and architecture. Even if you don't have a ready sketch of what you want - we will help you get the result.</p>
+                        <p>We can also help you create harmony out of seemingly completely incompatible elements in the interior or the exterior design. Do you want to combine classics and abstract art? Modern and retro? Love everything associated with the 1940's? No problem! </p>
+                        <div class="philosophy-link">
+                          <a href="#"> <span>-</span>  Discover more</a>
+                        </div>
+                      </div>
+                      <div class="philosophy__content-img">
+                        <img src="assets/images/philosophy/table.png" alt="">
+                      </div>
+                    </div>
+                    <div class="philosophy__bottom">
+                      <div class="philosophy__bottom-img">
+                        <img src="assets/images/philosophy/bottom.png" alt="">
+                        <img class="img-position" src="assets/images/philosophy/position.png" alt="">
+                      </div>
+                      <div class="philosophy__bottom-text">
+                        <p>We can also help you create harmony out of seemingly completely incompatible elements in the interior or the exterior design. </p>
+                      </div>
+                    </div>
+                </section>
             
             
         </main>
