--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                           <span>80 sq.m</span>
             
                           <div class="projects__top-one-shadow-bottom">
-                            <h3>Residence by the <span>lighthouse</span> </h3>
+                            <h3>Minimalist style home </h3>
                             <a href="#"> - Discover more</a>
                           </div>
                         </div>
