--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </div>
                 </section>
                 <section class="link">
-                            <a href="#">@lorem.ipsum</a>
+                            <a href="404.html">@lorem.ipsum</a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu mauris vitae posuere. </p>
                         
                             <ul class="linl__content-ul">
@@ -415,12 +415,16 @@
                                     </div>
                                 </div>
                                 <div class="drop__content-flex-right">
-                                    <a href="mailto:info@gmail.com">info@gmail.com</a>
-                                    <div class="flex-right-lan">
-                                        <a href="#">Fb</a>
-                                        <a href="#">In</a>
-                                        <a href="#">Be</a>
+                                    <button class="secret-button">Make request</button>
+                                    <div class="block-info">
+                                        <a href="mailto:info@gmail.com">info@gmail.com</a>
+                                        <div class="flex-right-lan">
+                                            <a href="#">Fb</a>
+                                            <a href="#">In</a>
+                                            <a href="#">Be</a>
+                                        </div>
                                     </div>
+                                   
                                 </div>
                             </div>
                             <button>Make request</button>
