--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
-    <title></title>
+    <title>404 Page Not Found</title>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
                         <ul>
                         <li class="li-one"><a class="header-link" href="#">Projects</a></li>
                         <li><a class="header-link" href="#">About us</a></li>
-                        <li><a class="header-link" href="">Blog</a></li>
+                        <li><a class="header-link" href="news.html">Blog</a></li>
                         <li><a class="header-link" href="#">Contacts</a></li>
                         </ul>
                     </nav>
@@ -115,6 +115,7 @@
         </header>
 
         <main class="main">
+            
             <section class="info-error">
                 <div class="container">
                     <div class="info-error__text">
