--- a/news.html
+++ b/news.html
@@ -128,11 +128,11 @@
                            <span class="news-btn-list advice-news-btn" data-tab="#tab-3">Advice from the designer</span>
                         </div>
             
-                        <select class="select-news" name="" id="">
+                        <select class="select-news" id="select-id">
                             <option value="0">All</option>
                             <option value="1">Blog</option>
                             <option value="2">News</option>
-                            <option value="2">Advice from the designer</option>
+                            <option value="3">Advice from the designer</option>
                         </select>
                     </div>
             
