--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="header__sec">
                         <nav>
                             <ul>
-                                <li class="li-one"><a class="header-link" href="#">Home</a></li>
+                                <li class="li-one"><a class="header-link" href="index.html">Home</a></li>
                             <li class="li-one"><a class="header-link" href="#">Projects</a></li>
                             <li><a class="header-link" href="#">About us</a></li>
-                            <li><a class="header-link" href="">Blog</a></li>
+                            <li><a class="header-link" href="news.html">Blog</a></li>
                             <li class="last-link"><a class="header-link last-link" href="#">Contacts</a></li>
                             </ul>
                             <button>Send Request</button>
