add new page: one news

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -36,7 +36,7 @@
                         <li class="li-one"><a class="header-link" href="#">Projects</a></li>
                         <li><a class="header-link" href="#">About us</a></li>
                         <li><a class="header-link" href="news.html">Blog</a></li>
-                        <li><a class="header-link" href="#">Contacts</a></li>
+                        <li><a class="header-link" href="contact.html">Contacts</a></li>
                         </ul>
                     </nav>
                     <div class="header__content-btn">
@@ -53,7 +53,7 @@
                             <li class="li-one"><a class="header-link" href="#">Projects</a></li>
                             <li><a class="header-link" href="#">About us</a></li>
                             <li><a class="header-link" href="news.html">Blog</a></li>
-                            <li class="last-link"><a class="header-link last-link" href="#">Contacts</a></li>
+                            <li class="last-link"><a class="header-link last-link" href="contact.html">Contacts</a></li>
                             </ul>
                             <button>Send Request</button>
                         </nav>
