--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <div class="header__content">
                     <nav>
                         <ul>
-                        <li class="li-one"><a class="header-link" href="#">Projects</a></li>
+                        <li class="li-one"><a class="header-link"  href="project.html">Projects</a></li>
                         <li><a class="header-link" href="#">About us</a></li>
                         <li><a class="header-link" href="news.html">Blog</a></li>
                         <li><a class="header-link" href="contact.html">Contacts</a></li>
@@ -50,7 +50,7 @@
                         <nav>
                             <ul>
                                 <li class="li-one"><a class="header-link" href="index.html">Home</a></li>
-                            <li class="li-one"><a class="header-link" href="#">Projects</a></li>
+                            <li class="li-one"><a class="header-link"  href="project.html">Projects</a></li>
                             <li><a class="header-link" href="#">About us</a></li>
                             <li><a class="header-link" href="news.html">Blog</a></li>
                             <li class="last-link"><a class="header-link last-link" href="contact.html">Contacts</a></li>
