--- a/news.html
+++ b/news.html
@@ -467,6 +467,7 @@
                                 <div class="news-input">
                                     <input type="email" id="news-email" placeholder=" ">
                                     <label for="news-email">Email</label>
+                                    <button></button>
                                 </div>
                             </div>
                             
