--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                       </div>
                     </div>
                     <div class="swipers-text">
-                     <a href="#">Next Project</a>
+                     <a href="project.html">Next Project</a>
                      <h3><span>Perfect </span>  proportions</h3>
                     </div>
                    <div class="swipers-bottom">
@@ -413,7 +413,7 @@
                         <p>The basic philosophy of our studio is to create individual, aesthetically stunning solutions for our customers by lightning-fast development of projects employing unique styles and architecture. Even if you don't have a ready sketch of what you want - we will help you get the result.</p>
                         <p>We can also help you create harmony out of seemingly completely incompatible elements in the interior or the exterior design. Do you want to combine classics and abstract art? Modern and retro? Love everything associated with the 1940's? No problem! </p>
                         <div class="philosophy-link">
-                          <a href="#"> <span>-</span>  Discover more</a>
+                          <a href="news.html"> <span>-</span>  Discover more</a>
                         </div>
                       </div>
                       <div class="philosophy__content-img">
