--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                           <h1 class="swipers__info-title"><span class="span-title">Thoughtful </span> 
                            <span class="sub-span"> making of </span>space</h1>
                             <div class="swipers__info-list">
-                              <a class="list-link" href="#"> -  Discover more</a>
+                              <a class="list-link" href="news.html"> -  Discover more</a>
                             </div>
                         </div>
                        
