--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
         </div>
         <div class="popup2__criss-cross icon-criss-cross close-popup"></div>
       </div>    <div class="page">
-        <header id="header" class="lock-padding">
+        <header id="header" class="lock-padding header-js">
             <div class="container">
                 <div class="header">
                 <div class="header__logo">
@@ -329,7 +329,7 @@
             </div>
             <section class="drop drop-html">
                 <div class="container">
-                    <div class="drop__content">
+                    <div class="drop__content content-vissavle">
                         <div class="drop__content-top">
                             <h4 class="drop__top-title">Drop us a line</h4>
                             <p class="drop__top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper eu mauris vitae posuere. </p>
