--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </div>
         <div class="popup2__criss-cross icon-criss-cross close-popup"></div>
       </div>    <div class="page">
-        <header id="header" class="lock-padding">
+        <header id="header" class="lock-padding header-js">
             <div class="container">
                 <div class="header">
                 <div class="header__logo">
@@ -361,7 +361,7 @@
                           <h1 class="swipers__info-title"><span class="span-title">Thoughtful </span> 
                            <span class="sub-span"> making of </span>space</h1>
                             <div class="swipers__info-list">
-                              <a class="list-link" href="news.html"> -  Discover more</a>
+                              <a class="list-link" href="project.html"> -  Discover more</a>
                             </div>
                         </div>
                        
