--- a/one-project.html
+++ b/one-project.html
@@ -226,7 +226,7 @@
         </div>
         <div class="popup2__criss-cross icon-criss-cross close-popup"></div>
       </div>    <div class="page">
-        <header id="header" class="lock-padding">
+        <header id="header" class="lock-padding header-js">
             <div class="container">
                 <div class="header">
                 <div class="header__logo">
