--- a/one-project.html
+++ b/one-project.html
@@ -372,7 +372,7 @@
             
             <section class="proimg">
                 <div class="container">
-                    <div class="img_top">
+                    <div class="img_top lol-ma">
                         <img src="assets/images/one-project/grow/top.png" alt="">
                     </div>
                     <div class="img_middle">
